--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -350,7 +350,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/znqUwx0b0HI?si=-QIU_wQ6u8VVnHyY', '_blank');">
-                    <img src="./image/youtube1.png" alt="YouTube Video">
+                    <img src="./image/youtube1.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
@@ -361,7 +361,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/yU_JgeAIRko?si=NvLQzOQ6jnEZUuGV', '_blank');">
-                    <img src="./image/youtube2.png" alt="YouTube Video">
+                    <img src="./image/youtube2.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
@@ -372,7 +372,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/ThaIBFd387A?si=1AIbstDCoXEmYY2e', '_blank');">
-                    <img src="./image/youtube3.png" alt="YouTube Video">
+                    <img src="./image/youtube3.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
@@ -386,7 +386,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/0UGQ6-W-55U?si=TC1ueEnSYt066OWn', '_blank');">
-                    <img src="./image/youtube4.png" alt="YouTube Video">
+                    <img src="./image/youtube4.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
@@ -397,7 +397,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/Tkp3FDgOueM?si=qw9E3l3vc2Hb4iOs', '_blank');">
-                    <img src="./image/youtube5.png" alt="YouTube Video">
+                    <img src="./image/youtube5.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
@@ -408,7 +408,7 @@
         <div class="card">
             <div class="container1">
                 <div class="image-container" onclick="window.open('https://youtu.be/ZdJSHEczi_0?si=PRnoxbXLqCigvOeR', '_blank');">
-                    <img src="./image/youtube6.png" alt="YouTube Video">
+                    <img src="./image/youtube6.jpg" alt="YouTube Video">
                     <div class="play-button"></div>
                 </div>
             </div>
